// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyComponent renders 1`] = `
<tf-property section="global">
  <mock:shadow-root>
    <div class="property" style="background: repeating-conic-gradient(#aaa 0% 25%, #fff 0% 50%) 50% / 10px 10px; z-index: 0;">
      <tf-button class="property__edit" size="icon" title="edit style">
        <tf-icon icon="pen"></tf-icon>
      </tf-button>
      <div class="property__value tf_color" style="background: linear-gradient(0deg, #FF0000 50%, rgba(255,0,0,1) 50%);">
        <div style="position: absolute; top: 0; bottom: 0; left: 50%; right: 0; background: #fff; z-index: -1;"></div><pre style="background-color: rgba(100, 100, 100, 0.7); color: #eee;">#ff0000</pre>
      </div>
    </div>
  </mock:shadow-root>
</tf-property>
`;

exports[`PropertyComponent renders with values 1`] = `
<tf-property section="global">
  <mock:shadow-root>
    <div class="property" style="background: repeating-conic-gradient(#aaa 0% 25%, #fff 0% 50%) 50% / 10px 10px; z-index: 0;">
      <tf-button class="property__edit" size="icon" title="edit style">
        <tf-icon icon="pen"></tf-icon>
      </tf-button>
      <div class="property__value tf_color" style="background: linear-gradient(0deg, #FF0000 50%, rgba(255,0,0,1) 50%);">
        <div style="position: absolute; top: 0; bottom: 0; left: 50%; right: 0; background: #fff; z-index: -1;"></div><pre style="background-color: rgba(100, 100, 100, 0.7); color: #eee;">#ff0000</pre>
      </div>
      <div class="property__name" style="background-color: rgba(100, 100, 100, 0.7); color: #eee;">
        <tf-icon icon="globe" size="small"></tf-icon>
        <span>
          Very long named nice Background color
        </span>
      </div>
    </div>
  </mock:shadow-root>
</tf-property>
`;
